force-app/main/default/objects/LetterGroup__c/LetterGroup__c.object-meta.xml
<CustomObject>
    <label>Letter Group</label>
    <nameField>
        <displayFormat>LG-{00000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Letter Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>