force-app/main/default/objects/LetterGroup__c/fields/ReceiveSendDate__c.field-meta.xml
<CustomField>
    <fullName>ReceiveSendDate__c</fullName>
    <label>Receive/Send Date</label>
    <type>Date</type>
</CustomField>