force-app/main/default/objects/LetterGroup__c/fields/ReferenceLetter__c.field-meta.xml
<CustomField>
    <fullName>ReferenceLetter__c</fullName>
    <label>Reference Letter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>