force-app/main/default/objects/LetterGroup__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Modec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>