force-app/main/default/objects/LetterGroup__c/recordTypes/Vessel.recordType-meta.xml
<RecordType>
    <fullName>Vessel</fullName>
    <active>true</active>
    <label>Vessel</label>
</RecordType>