force-app/main/default/objects/LetterGroup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vessel__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Deadline__c</columns>
    <columns>ReferenceLetter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Administrator</role>
        <role>Commercial</role>
        <role>VesselContractAdministrator</role>
        <role>Vessel_Contract_Read</role>
    </sharedTo>
</ListView>