force-app/main/default/objects/LetterGroup__c/listViews/Fleet.listView-meta.xml
<ListView>
    <fullName>Fleet</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>ReceiveSendDate__c</columns>
    <columns>Deadline__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>LetterGroup__c.Fleet</value>
    </filters>
    <label>FLEET</label>
</ListView>