force-app/main/default/objects/LetterGroup__c/listViews/FLU.listView-meta.xml
<ListView>
    <fullName>FLU</fullName>
    <columns>NAME</columns>
    <columns>Vessel__c</columns>
    <columns>ReceiveSendDate__c</columns>
    <columns>Source__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vessel__c</field>
        <operation>contains</operation>
        <value>FLU</value>
    </filters>
    <label>FLU</label>
</ListView>