force-app/main/default/objects/LetterGroup__c/listViews/MV18.listView-meta.xml
<ListView>
    <fullName>MV18</fullName>
    <columns>NAME</columns>
    <columns>ReferenceLetter__c</columns>
    <columns>Subject__c</columns>
    <columns>ReceiveSendDate__c</columns>
    <columns>Deadline__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vessel__c</field>
        <operation>contains</operation>
        <value>MV15</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>MV15 - Pending</label>
</ListView>