force-app/main/default/objects/LetterGroup__c/listViews/MV22.listView-meta.xml
<ListView>
    <fullName>MV22</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Deadline__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ReferenceLetter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vessel__c</field>
        <operation>contains</operation>
        <value>MV22</value>
    </filters>
    <label>MV22</label>
</ListView>