force-app/main/default/objects/LetterGroup__c/listViews/MV24.listView-meta.xml
<ListView>
    <fullName>MV24</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>ReceiveSendDate__c</columns>
    <columns>Deadline__c</columns>
    <columns>Status__c</columns>
    <columns>ReferenceLetter__c</columns>
    <columns>Vessel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vessel__c</field>
        <operation>contains</operation>
        <value>MV24</value>
    </filters>
    <label>MV24</label>
</ListView>