force-app/main/default/objects/LetterGroup__c/listViews/MV26.listView-meta.xml
<ListView>
    <fullName>MV26</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>ReceiveSendDate__c</columns>
    <columns>Deadline__c</columns>
    <columns>Status__c</columns>
    <columns>ReferenceLetter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vessel__c</field>
        <operation>contains</operation>
        <value>MV26</value>
    </filters>
    <label>MV26</label>
</ListView>