force-app/main/default/objects/LetterGroup__c/listViews/MV27_Todas.listView-meta.xml
<ListView>
    <fullName>MV27_Todas</fullName>
    <columns>Vessel__c</columns>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Subject__c</columns>
    <columns>ReceiveSendDate__c</columns>
    <columns>Status__c</columns>
    <columns>ReferenceLetter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vessel__c</field>
        <operation>contains</operation>
        <value>MV27</value>
    </filters>
    <label>MV27 Todas</label>
</ListView>